--- a/Solana-Group-7/src/main/resources/templates/Login.html
+++ b/Solana-Group-7/src/main/resources/templates/Login.html
@@ -483,7 +483,7 @@ input:valid {
                         <div class="col-md-6 ">
 
                           <div class="checkbox-wrapper-46 mt-3 text-center">
-  <input type="checkbox" ${check ? checked : ga} name="checked" id="cbx-46" class="inp-cbx" />
+  <input type="checkbox" ${check ? checked : ga} name="checked" id="cbx-46" value="true" class="inp-cbx" />
   <label for="cbx-46" class="cbx"
     ><span>
       <svg viewBox="0 0 12 10" height="10px" width="12px">
