--- a/Solana-Group-7/src/main/resources/templates/userAPP.html
+++ b/Solana-Group-7/src/main/resources/templates/userAPP.html
@@ -531,7 +531,7 @@ font-size: 20px;
 
               </div>
 
-              <div class="row mt-5 mb-5">
+              <div class="row mt-5 mb-2">
 
                 <div class="col-md-4 mb-5">
   
@@ -595,6 +595,72 @@ font-size: 20px;
                   
   
                 </div>
+                
+                <div class="row mt-3 mb-5">
+
+              <div class="col-md-4   ">
+
+                
+                <div class="card5">
+                  <div class="card-img"><button class="red-btn button">THIS IS MY FAVORITE</button> </div>
+                    <div class="card-info">
+                      <div class="card-text">
+                        <p class="text-title">This is MY FAVORITE</p>
+                        
+                         <a style="text-decoration: none;" href="/user/favoritenft"><p class="text-subtitle">Click to Start</p></a>
+                      </div>
+                      <div class="card-icon">
+                        <svg viewBox="0 0 28 25" class="icon">
+                          <path d="M13.145 2.13l1.94-1.867 12.178 12-12.178 12-1.94-1.867 8.931-8.8H.737V10.93h21.339z"></path>
+                        </svg>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-4 ">
+
+                
+                  <div class="card5">
+                    <div class="card-img"><button class="red-btn button">SETTING LANGUAGE</button> </div>
+                      <div class="card-info">
+                        <div class="card-text">
+                          <p class="text-title">This is SETTING LANGUAGE</p>
+                          <a style="text-decoration: none;" href="/user/language"><p class="text-subtitle">Click to Start</p></a>
+                        </div>
+                        <div class="card-icon">
+                          <svg viewBox="0 0 28 25" class="icon">
+                            <path d="M13.145 2.13l1.94-1.867 12.178 12-12.178 12-1.94-1.867 8.931-8.8H.737V10.93h21.339z"></path>
+                          </svg>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+
+                  <div class="col-md-4 ">
+
+                
+                    <div class="card5">
+                      <div class="card-img">  <button class="blue-btn button">MY NFTs</button> </div>
+                        <div class="card-info">
+                          <div class="card-text">
+                            <p class="text-title">This is MY NFTs</p>
+                           
+                          </div>
+                          <div class="card-icon">
+                            <svg viewBox="0 0 28 25" class="icon">
+                              <path d="M13.145 2.13l1.94-1.867 12.178 12-12.178 12-1.94-1.867 8.931-8.8H.737V10.93h21.339z"></path>
+                            </svg>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                      
+                
+
+                
+                
+
+              </div>
 
             </div>
 
