--- a/Solana-Group-7/src/main/resources/templates/NFTDetail.html
+++ b/Solana-Group-7/src/main/resources/templates/NFTDetail.html
@@ -676,10 +676,10 @@ input:-webkit-autofill:hover,
                             <h5 class="card-title">Current price</h5>
                             <p class="fs-3 fw-bold pt-2">[[${nft.price}]] <img class="img" src="/images/icons8-solana-35.png" alt=""></p>
                             <p class="card-text" th:text="${nft.description}"></p>
-                            <div class="d-flex justify-content-between">
-                                <button class="btn w-50 me-1 btn-primary" style="font-size: 30px; width: 100%; height: 70px; ">Add <span><i class="bi-cart"></i></span></button>
-                                <button class="btn w-50 btn-danger	" style="font-size: 30px; width: 100%; height: 70px; ">BUY</button>
-                            </div>
+                            <form method="get" class="d-flex justify-content-between">
+                                <button class="btn w-50 me-1 btn-primary" th:formaction="@{/user/favoritenft/{idnft}(idnft=${nft.nftId})}" style="font-size: 30px; width: 100%; height: 70px; ">Add <span><i class="bi-cart"></i></span></button>
+                                <button class="btn w-50 btn-danger	" th:formaction="@{/user/buy/{idnft}(idnft=${nft.nftId})}" style="font-size: 30px; width: 100%; height: 70px; ">BUY</button>
+                            </form>
                         </div>
                     </div>
                     <div class="accordion mt-3" id="accordionExample">
