--- a/Solana-Group-7/src/main/resources/templates/myNFT.html
+++ b/Solana-Group-7/src/main/resources/templates/myNFT.html
@@ -202,7 +202,7 @@ font-size: 20px;
 
 .card {
   width: 300px;
-  height: 330px;
+  height: 530px;
   background-color: #FF3CAC;
   background-image: linear-gradient(225deg, #FF3CAC 0%, #784BA0 50%, #2B86C5 100%);
   color: white;
@@ -377,7 +377,7 @@ input:-webkit-autofill:active {
 }
 
 .card11 {
-  width: 288px;
+  width: 100%;
   padding: 10px;
   background-image: linear-gradient(to right bottom, #5d0391, #7b05ae, #9b05cb, #bd00e7, #bd00e7);
   background-size: 200% 200%;
@@ -393,10 +393,10 @@ input:-webkit-autofill:active {
   background-color: white;
 }
 
-.img1 {
+.img-fluid {
   width: 100%;
   height: 300px;
-  background-color: pink;
+  object-fit: cover;
 }
 
 .title11 {
@@ -411,7 +411,7 @@ input:-webkit-autofill:active {
 }
 
 .card11__span {
-  font-family: 'Lucida Sans' sans-serif;
+  font-family: 'Lucida Sans', sans-serif;
   font-size: 11px;
   position: absolute;
   top: 10px;
@@ -452,6 +452,7 @@ button:active {
     background-position: 400% 400%;
   }
 }
+
 
 </style>
 <body>
@@ -503,138 +504,75 @@ button:active {
         </div>
       </div>
     </nav>
-    <article>
-		<div class="row mt-4">
-		
-			<div class="col-md-12 text-center">
-			<h1 class="fw-bold text-white">MY NFTs</h1>
-			</div>
-		
-		</div>
-      <div class="row mt-4">
-
-        <div class="col-md-3 card11 ms-5">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid text-center"> <img src="../images/nft1.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
+     <article>
+      <div class="row">
+        <div class="py-4 text-center">
+          <h1>List All Your NFTs</h1>
+          <p>This is a sample project which will list all your NFTs associated with your wallet</p>
         </div>
-
-        </div>
-
-        <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft2.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
-        <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft3.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
-            <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft4.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
       </div>
-      
-       <div class="row mt-5">
-
-        <div class="col-md-3 card11 ms-5">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft5.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
+      <div class="container-lg">
+        <div class="row" id="nft-container">
+          <!-- NFT cards will be appended here -->
         </div>
-
+        <div class="row mt-4">
+          <div class="col-12 text-center">
+            <button class="btn btn-primary" onclick="fetchNFTs(event)">Get NFTs</button>
+          </div>
         </div>
-
-        <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft6.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
-        <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft7.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
-            <div class="col-md-3 card11 ms-4">
-
-          <div class="card11-int">
-            <span class="card11__span">Category</span>
-            <div style="background-color: #283542;" class="img-fluid"> <img src="../images/nft8.png" alt=""> </div>
-            <div class="card11-data">
-              <p class="title11">This is a test title
-              </p><p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-              <button class="button11">More info</button>
-            </div>
-        </div>
-
-        </div>
-
       </div>
-      
-      
     </article>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@solana/web3.js@1.16.0/lib/index.iife.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@solana/wallet-adapter-phantom@0.8.0/lib/index.iife.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <script type="text/javascript">
+    let wallID = "7CqNMsdsHzxvCtAqYN3KNAk496x6XAzgaUSbhSaRupZB";  // Thay bằng địa chỉ ví của bạn
+    const xKey = "0ZZi5a0Eo89-knJM";
+    const network = "devnet";
 
+    const fetchNFTs = async (e) => {
+      e.preventDefault();
+      let nftUrl = `https://api.shyft.to/sol/v1/nft/read_all?network=${network}&address=${wallID}`;
+      try {
+        const response = await axios.get(nftUrl, {
+          headers: {
+            "Content-Type": "application/json",
+            "x-api-key": xKey,
+          },
+        });
+        const data = response.data;
 
-    </div>
+        // Xóa các kết quả trước đó
+        const nftContainer = document.getElementById('nft-container');
+        nftContainer.innerHTML = '';
+
+        // Lặp qua các NFT đã fetch và thêm vào container
+        data.result.forEach(item => {
+          const nftCard = `
+            <div class="col-md-4 mb-4">
+              <div class="card card11">
+                <div class="card11-int">
+                  <span class="card11__span text-danger">Category</span>
+                  <div class="img-fluid">
+                    <img src="${item.image_uri}" class="card-img-top img1" alt="${item.name}">
+                  </div>
+                  <div class="card11-data">
+                    <p class="card-title title11 text-danger">${item.name}</p>
+                    <p class="card-text text-danger">${item.description || "No description available."}</p>
+                    <button class="btn btn-primary button11">More info</button>
+                  </div>
+                </div>
+              </div>
+            </div>`;
+          nftContainer.innerHTML += nftCard;
+        });
+
+      } catch (err) {
+        console.warn(err);
+      }
+    };
+  </script>
 </body>
 </html>
