--- a/Solana-Group-7/src/main/resources/templates/userAPP.html
+++ b/Solana-Group-7/src/main/resources/templates/userAPP.html
@@ -512,7 +512,9 @@ font-size: 20px;
                       <div class="card-img">  <button class="blue-btn button">MY NFTs</button> </div>
                         <div class="card-info">
                           <div class="card-text">
-                            <p class="text-title">This is MY NFTs</p>
+                           <p class="text-title">This is MY NFTs</p>
+                        
+                         <a style="text-decoration: none;" href="/user/checkcoin"><p class="text-subtitle">Click to Start</p></a>
                            
                           </div>
                           <div class="card-icon">
