--- a/Solana-Group-7/src/main/resources/templates/userAPP.html
+++ b/Solana-Group-7/src/main/resources/templates/userAPP.html
@@ -514,7 +514,7 @@ font-size: 20px;
                           <div class="card-text">
                            <p class="text-title">This is MY NFTs</p>
                         
-                         <a style="text-decoration: none;" href="/user/checkcoin"><p class="text-subtitle">Click to Start</p></a>
+                         <a style="text-decoration: none;" href="/user/mynft"><p class="text-subtitle">Click to Start</p></a>
                            
                           </div>
                           <div class="card-icon">
